--- a/src/main.css
+++ b/src/main.css
@@ -10,6 +10,7 @@ body{
   margin-top: 2%;
   line-height: 0;
   padding: 2%;
+  cursor: pointer;
 }
 
 #colors {
@@ -22,6 +23,7 @@ body{
   height: 10px;
   display: inline-block;
   margin: .5px .5px;
+  cursor: crosshair;
 }
 
 .brushColor {
